@@ -5,7 +5,8 @@
  * For commercial licenses see https://www.tiny.cloud/
  */
 
-import { document, Element, Event, Node } from '@ephox/dom-globals';
+import { document, Element, Event, MouseEvent, Node } from '@ephox/dom-globals';
+import { Obj } from '@ephox/katamari';
 import { Element as SugarElement, Selectors } from '@ephox/sugar';
 import * as NodeType from '../../dom/NodeType';
 import * as RangePoint from '../../dom/RangePoint';
@@ -17,7 +18,6 @@ import Delay from '../util/Delay';
 import Tools from '../util/Tools';
 import VK from '../util/VK';
 import Selection from './Selection';
-import { Obj } from '@ephox/katamari';
 
 interface ControlSelection {
   isResizable (elm: Element): boolean;
@@ -94,11 +94,9 @@ const ControlSelection = (selection: Selection, editor: Editor): ControlSelectio
     }
   };
 
-  const getResizeTarget = function (elm) {
-    return editor.dom.is(elm, 'figure.image') ? elm.querySelector('img') : elm;
-  };
+  const getResizeTarget = (elm: Element) => editor.dom.is(elm, 'figure.image') ? elm.querySelector('img') : elm;
 
-  const isResizable = function (elm) {
+  const isResizable = (elm: Element) => {
     let selector = Settings.getObjectResizing(editor);
 
     if (selector === false || Env.iOS) {
@@ -120,7 +118,14 @@ const ControlSelection = (selection: Selection, editor: Editor): ControlSelectio
     return Selectors.is(SugarElement.fromDom(elm), selector);
   };
 
-  const resizeGhostElement = function (e) {
+  const setGhostElmSize = (ghostElm: Element, width: number, height: number) => {
+    dom.setStyles(getResizeTarget(ghostElm), {
+      width,
+      height
+    });
+  };
+
+  const resizeGhostElement = (e: MouseEvent) => {
     let deltaX, deltaY, proportional;
     let resizeHelperX, resizeHelperY;
 
@@ -154,10 +159,7 @@ const ControlSelection = (selection: Selection, editor: Editor): ControlSelectio
     }
 
     // Update ghost size
-    dom.setStyles(getResizeTarget(selectedElmGhost), {
-      width,
-      height
-    });
+    setGhostElmSize(selectedElmGhost, width, height);
 
     // Update resize helper position
     resizeHelperX = selectedHandle.startPos.x + deltaX;
@@ -201,23 +203,26 @@ const ControlSelection = (selection: Selection, editor: Editor): ControlSelectio
     }
   };
 
-  const endGhostResize = function () {
+  const endGhostResize = () => {
+    const wasResizeStarted = resizeStarted;
     resizeStarted = false;
 
-    const setSizeProp = function (name, value) {
+    const setSizeProp = (name: string, value: number) =>{
       if (value) {
         // Resize by using style or attribute
         if (selectedElm.style[name] || !editor.schema.isValid(selectedElm.nodeName.toLowerCase(), name)) {
           dom.setStyle(getResizeTarget(selectedElm), name, value);
         } else {
-          dom.setAttrib(getResizeTarget(selectedElm), name, value);
+          dom.setAttrib(getResizeTarget(selectedElm), name, '' + value);
         }
       }
     };
 
     // Set width/height properties
-    setSizeProp('width', width);
-    setSizeProp('height', height);
+    if (wasResizeStarted) {
+      setSizeProp('width', width);
+      setSizeProp('height', height);
+    }
 
     dom.unbind(editableDoc, 'mousemove', resizeGhostElement);
     dom.unbind(editableDoc, 'mouseup', endGhostResize);
@@ -233,12 +238,14 @@ const ControlSelection = (selection: Selection, editor: Editor): ControlSelectio
 
     showResizeRect(selectedElm);
 
-    Events.fireObjectResized(editor, selectedElm, width, height);
-    dom.setAttrib(selectedElm, 'style', dom.getAttrib(selectedElm, 'style'));
+    if (wasResizeStarted) {
+      Events.fireObjectResized(editor, selectedElm, width, height);
+      dom.setAttrib(selectedElm, 'style', dom.getAttrib(selectedElm, 'style'));
+    }
     editor.nodeChanged();
   };
 
-  const showResizeRect = function (targetElm) {
+  const showResizeRect = (targetElm: Element) => {
     let position, targetWidth, targetHeight, e, rect;
 
     hideResizeRect();
@@ -262,10 +269,10 @@ const ControlSelection = (selection: Selection, editor: Editor): ControlSelectio
     e = editor.fire('ObjectSelected', { target: targetElm });
 
     if (isResizable(targetElm) && !e.isDefaultPrevented()) {
-      each(resizeHandles, function (handle, name) {
+      each(resizeHandles, (handle, name) => {
         let handleElm;
 
-        const startDrag = function (e) {
+        const startDrag = (e: MouseEvent) => {
           startX = e.screenX;
           startY = e.screenY;
           startW = getResizeTarget(selectedElm).clientWidth;
@@ -291,6 +298,9 @@ const ControlSelection = (selection: Selection, editor: Editor): ControlSelectio
             top: selectedElmY,
             margin: 0
           });
+
+          // Set initial ghost size
+          setGhostElmSize(selectedElmGhost, targetWidth, targetHeight);
 
           selectedElmGhost.removeAttribute('data-mce-selected');
           rootElement.appendChild(selectedElmGhost);
@@ -330,7 +340,7 @@ const ControlSelection = (selection: Selection, editor: Editor): ControlSelectio
           handleElm.contentEditable = false;
         }
 
-        dom.bind(handleElm, 'mousedown', function (e) {
+        dom.bind(handleElm, 'mousedown', (e) => {
           e.stopImmediatePropagation();
           e.preventDefault();
           startDrag(e);
@@ -351,7 +361,7 @@ const ControlSelection = (selection: Selection, editor: Editor): ControlSelectio
     selectedElm.setAttribute('data-mce-selected', '1');
   };
 
-  const hideResizeRect = function () {
+  const hideResizeRect = () => {
     unbindResizeHandleEvents();
 
     if (selectedElm) {
